fixed: notice sizing, text div sizing, string length and format, overflow applied

--- a/style.css
+++ b/style.css
@@ -11,8 +11,6 @@ body {
   background-repeat: repeat;
   height: 100vh;
   width: 100vw;
-  /* max-height: 800px;
-  max-width: 800px; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -70,7 +68,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* gap: 5px; */
   width: 650px;
   height: 250px;
   background-color: #f2e8f2;
@@ -132,9 +129,19 @@ body {
 
 .question,
 .answer {
-  color: #303030;
+  overflow: auto;
+  max-height: 170px;
+  background-color: #fafafa;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* height: auto; */
+  width: 400px;
+  color: #000000;
   cursor: pointer;
-  font-size: 25px;
+  font-size: 16px;
 }
 
 .answer {
@@ -142,14 +149,30 @@ body {
 }
 
 .text-box {
-  display: flex;
-  align-items: center;
-  gap: 50px;
-  justify-content: flex-end;
-  flex-direction: column;
-
   height: 200px;
   width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  flex-direction: column;
+}
+
+.text-area {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 170px;
+  width: 400px;
+}
+.btns-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30;
+  width: 400px;
+  background: rgb(16, 15, 16);
 }
 
 /* SETS */
@@ -169,14 +192,6 @@ body {
 .set:active {
   color: #e70cbe;
 }
-
-/* .set-name {
-  flex-grow: 1;
-  max-width: 80%;
-  overflow-wrap: break-word;
-  white-space: pre-wrap;
-  word-break: break-all;
-} */
 
 /* BUTTONS */
 .btn {
@@ -203,16 +218,22 @@ body {
 .btn-submit-set {
   width: 135px;
 }
-.fa-solid {
+.icon-right,
+.icon-left {
   color: #fb0b93;
   font-size: 40px;
-  /* padding-right: 20px; */
 }
 .fa-shuffle,
 .fa-regular {
   color: #fb0b93;
   font-size: 20px;
   /* padding-right: 20px; */
+}
+
+.card-del,
+.btn-randomize,
+.btn-edit {
+  color: white;
 }
 
 .arrow-left,
@@ -232,6 +253,14 @@ body {
   color: white;
   transform: scale(0.99);
 }
+.arrow-sleep {
+  background-color: #ffffff;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+}
+.flip-icon-sleep {
+  color: #eee9ec;
+}
+
 .close-dialog-btn,
 .yes-delete-btn {
   font-size: 20px;
@@ -263,14 +292,6 @@ body {
 .yes-delete-btn:hover {
   border: #f30000 4px solid;
 }
-/* .close-dialog-btn {
-  color: #0de935;
-  border: 4px solid #0de935; */
-/* }
-.yes-delete-btn {
-  color: #e70c1a;
-  border: 4px solid #e70c1a;
-} */
 
 #close-dialog:active {
   background-color: rgb(231, 233, 231);
@@ -286,21 +307,10 @@ body {
   cursor: pointer;
 }
 .btn-set-delete {
-  /* 
- 
-  cursor: pointer;
-  margin-bottom: 5px;
-  width: 15px;
-  height: 15px; */
-
   border: none;
   background-color: transparent;
   align-self: center;
   margin-left: auto;
-
-  /* min-width: 20%; 
- 
-  flex: 0 0 auto; */
 }
 
 /* INPUTS & FORMS */
@@ -354,9 +364,8 @@ body {
   padding: 3px;
   border-radius: 15px;
 }
-/* .set-name {
-  height: 25px;
-} */
+
+/* CARD CONTENT*/
 
 /* DIALOGS */
 
@@ -370,7 +379,7 @@ dialog {
   margin: auto;
   background: rgba(255, 255, 255, 0.7);
   width: 400px;
-  height: auto;
+  height: 200px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
   border: #fb0b93 2px solid;
